name:                DMSS
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md

license:             ISC
license-file:        LICENSE
author:              TODO:<Author name here>
maintainer:          TODO:<example@example.com>
copyright:           © 2016 TODO:<Author name here>
homepage:            https://github.com/TODO:<githubuser>/DMSS
bug-reports:         https://github.com/TODO:<githubuser>/DMSS/issues

category:            Test
build-type:          Simple
stability:           alpha (experimental)
cabal-version:       >=1.10

extra-source-files:
  README.md
  stack.yaml

source-repository head
  type:     git
  location: https://github.com/TODO:<githubuser>/DMSS

library
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2
  hs-source-dirs:    src
  exposed-modules:   Lib
                   , DMSS.Daemon
  build-depends:     base >= 4.8 && < 5
                   , daemons
                   , data-default

executable dmss-cli
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-exe-cli
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , DMSS

executable dmssd
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-exe-daemon
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , DMSS

test-suite DMSS-test
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-test
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , tasty >= 0.11
                   , tasty-hunit >= 0.9
                   , tasty-smallcheck >= 0.8
                   , DMSS

test-suite DMSS-doctest
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-doctest
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , doctest >=0.10
                   , Glob >= 0.7
                   , QuickCheck >= 2.5
                   , DMSS

benchmark DMSS-benchmark
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-benchmark
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , criterion >= 1.1
                   , DMSS
