name:                DMSS
version:             0.1.0.0
synopsis:            Dead Man Switch System
description:         Trigger payloads if switch owner does or doesn't check in

license:             PublicDomain
license-file:        LICENSE
author:              David Parrish
maintainer:          daveparrish@tutanota.com
homepage:            https://github.com/dmp1ce/DMSS
bug-reports:         https://github.com/dmp1ce/DMSS/issues

category:            Unknown
build-type:          Simple
stability:           alpha (experimental)
cabal-version:       >=1.10

extra-source-files:
  README.md
  stack.yaml

source-repository head
  type:     git
  location: https://github.com/dmp1ce/DMSS

library
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2
  hs-source-dirs:    src
  exposed-modules:   DMSS.Daemon
                   , DMSS.CLI
                   , DMSS.CLI.Internal
                   , DMSS.Command
                   , DMSS.Config
                   , DMSS.Storage
                   , DMSS.Storage.Types
                   , DMSS.Common
  build-depends:     base >= 4.8 && < 5
                   , daemons
                   , data-default
                   , h-gpgme
                   , optparse-applicative
                   , cereal
                   , ansi-wl-pprint
                   , directory
                   , silently
                   , bytestring
                   , email-validate
                   , pretty
                   , persistent
                   , persistent-sqlite
                   , persistent-template
                   , text
                   , time
                   , transformers
                   , monad-logger
                   , resourcet
                   , esqueleto

executable dmss-cli
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-exe-cli
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , DMSS

executable dmssd
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-exe-daemon
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , DMSS

test-suite DMSS-test
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -Wall -rtsopts
  hs-source-dirs:    src-test
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , tasty >= 0.11
                   , tasty-hunit >= 0.9
                   , tasty-smallcheck >= 0.8
                   , silently
                   , temporary
                   , directory >= 1.2.5
                   , filepath
                   , persistent-sqlite
                   , DMSS
  other-modules:     DaemonTest
                   , StorageTest
                   , CLITest
                   , ConfigTest
                   , CommonTest
                   , Common

test-suite DMSS-doctest
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-doctest
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , doctest >=0.10
                   , Glob >= 0.7
                   , QuickCheck >= 2.5
                   , DMSS

benchmark DMSS-benchmark
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-benchmark
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , criterion >= 1.1
                   , DMSS
